--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <div class="avatar">
                     <img src="Headshot.JPG" class="rounded-headshot" alt="" height="300px" width="300px">
                     <div>
-                        <a class="icon-link" href="https://www.github.com/MaxMol1"><i class="fa fa-github"></i></a>
-                        <a class="icon-link" href="https://www.linkedin.com/in/maksimmolchanov/"><i class="fa fa-linkedin"></i></a>
+                        <a class="icon-link" href="https://www.github.com/MaxMol1" target="_blank"><i class="fa fa-github"></i></a>
+                        <a class="icon-link" href="https://www.linkedin.com/in/maksimmolchanov/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a class="icon-link" href="mailto:mmolchanov@ucdavis.edu?subject=Subject Text"><i class="fa fa-envelope-square"></i></a>
                     </div>
                 </div>
