--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h1>Max Molchanov</h1>
-                        <p class="mb-4 mt-4">Hello, my name is Max Molchanov. I am an undergradute
+                        <p class="mb-4 mt-4">Hello, my name is Max Molchanov. I am an undergraduate
                             computer science and engineering student at the University
                             of California, Davis. I have a keen interest toward Machine Learning,
                             Data Science, and algorithms.</p>
@@ -113,7 +113,7 @@
                         <hr class="my-4">
                         <div class="overlay-container">
                             <a href="https://sigmachidavis.com/" target="_blank">
-                                <img src="sigmachiproject.jpg" width="250px" height="auto">
+                                <img src="sigmachiproject.jpg" width="auto" height="170px">
                                 <div class="overlay">
                                     <span>Click Me!</span>
                                 </div>
@@ -134,15 +134,15 @@
                             <hr class="my-4">
                             <div class="overlay-container">
                                 <a href="https://ecs171-team11.herokuapp.com/" target="_blank">
-                                    <img src="download.jpg" width="250px" height="auto">
+                                    <img src="customer.jpg" width="auto" height="170px">
                                     <div class="overlay">
                                         <span>Click Me!</span>
                                     </div>
                                 </a>
                             </div>
                             <p class="mt-3">
-                                Multiple machine learning models predicting whether customers will buy a product based on
-                                observed qualities.
+                                Ten person group project building multiple machine learning models to predict whether
+                                customers will buy a product based on observed qualities.
                             </p>
                             <a href="https://github.com/martingul/ECS171-Team11" target="_blank"><p class="mt-3">GitHub</p></a>
                         </div>
@@ -154,11 +154,18 @@
                         <div class="card-body text-center">
                             <h4 class="text-uppercase m-0">Pouch Finance <br>Tracker</h4>
                             <hr class="my-4">
-                            <img src="finance.jpg" width="250px" height="auto">
+                            <div class="overlay-container">
+                                <a href="https://pouch.cash/" target="_blank">
+                                    <img src="pouch.jpg" width="auto" height="170px">
+                                    <div class="overlay">
+                                        <span>Click Me!</span>
+                                    </div>
+                                </a>
+                            </div>
                             <p class="mt-3">
                                 Finance tracker to track user's spending on a daily, weekly, and monthly basis.
                             </p>
-                            <a target="_blank"><p class="mt-3">TODO: GitHub</p></a>
+                            <a target="_blank"><p class="mt-3">Work In Progress</p></a>
                         </div>
                     </div>
                 </div>
@@ -172,9 +179,9 @@
                             <hr class="my-4">
                             <img src="led.jpg" width="250px" height="auto">
                             <p class="mt-3">
-                                Sound reactive LED strip with lyric fetching API and NLP color Classification.
+                                Sound reactive LED strip with lyric fetching API and lyrical sentiment analysis.
                             </p>
-                            <a target="_blank"><p class="mt-3">TODO: GitHub</p></a>
+                            <a href="https://github.com/MaxMol1/Sound-Reactive-LED" target="_blank"><p class="mt-3">GitHub</p></a>
                         </div>
                     </div>
                 </div>
