Implement dynamic resizing

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                             of California, Davis. I have a keen interest toward Machine Learning,
                             Data Science, and algorithms.</p>
                         <div class="button-container text-center">
-                            <a href="#education"><button type="button" class="btn btn-primary">Education</button></a>
-                            <a href="#projects"><button type="button" class="btn btn-primary">Projects</button></a>
-                            <a href="#"><button type="button" class="btn btn-primary">Experience</button></a>
-                            <a href="#skills"><button type="button" class="btn btn-primary">Skills</button></a>
+                            <a href="#education"><button type="button" class="mb-2 btn btn-primary">Education</button></a>
+                            <a href="#experience"><button type="button" class="mb-2 btn btn-primary">Experience</button></a>
+                            <a href="#projects"><button type="button" class="mb-2 btn btn-primary">Projects</button></a>
+                            <a href="#skills"><button type="button" class="mb-2 btn btn-primary">Skills</button></a>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
         <!-- Education -->
         <div class="row" id="education">
             <!-- Summary -->
-            <div class="col-7 row-col text-center">
+            <div class="col-md-7 col-12 row-col text-center">
                 <h1 class="pt-5 pb-5">Education</h1>
                 <div class="mt-4 text-left" style="margin: 0 auto; width: 450px;">
                     <h3 class="bold-font">University of California, Davis</h3>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <!-- Courses -->
-            <div class="col-5 row-col">
+            <div class="col-md-5 col-12 row-col">
                 <div class="left-popout text-white text-center">
                     <h2 class="pt-5 mb-3">Courses Include</h2>
                     <hr class="mb-5">
@@ -81,26 +81,28 @@
                 </div>
             </div>
         </div>
-        <!-- Experience 
+        <!-- Experience  -->
         <div class="row" id="experience">
             <div class="col-12 text-center">
                 <h1 class="header-padding">Experience</h1>
             </div>
-            <div class="col-12 text-left">
-                <h3 class="pb-1">AltoPass, Inc.</h3>
-                <p class="pb-5">
-                    Placeholder text for endeavors at AltoPass, Inc.
-                </p>
-                <h3 class="pb-1">UC Davis Genome Center</h3>
-                <p class="pb-5">
-                    Placeholder text for endeavors at UC Davis Genome Center
-                </p>
-                <h3 class="pb-1">Private Tutor</h3>
-                <p>
-                    Placeholder text for endeavors as a private tutor...    
-                </p>
+            <div class="col-12">
+                <div class="experience-container">
+                    <h3 class="pb-1">UC Davis Genome Center</h3>
+                    <p class="pb-5">
+                        Placeholder text for endeavors at UC Davis Genome Center
+                    </p>
+                    <h3 class="pb-1">AltoPass, Inc.</h3>
+                    <p class="pb-5">
+                        Worked on the search engine for the AltoPass password manager app.
+                    </p>
+                    <h3 class="pb-1">Private Tutor</h3>
+                    <p>
+                        Placeholder text for endeavors as a private tutor...    
+                    </p>
+                </div>
             </div>
-        </div> -->
+        </div>
         <!-- Projects -->
         <div class="text-center" id="projects" style="margin-top: 100px;">
             <h1 class="mb-5">Projects</h1>
@@ -122,7 +124,6 @@
                         <p class="mt-3">Website for the Theta Omicron Chapter of Sigma Chi developed with HTML, CSS, and
                             Javascript.
                         </p>
-                        <a href="https://github.com/MaxMol1/davis-sigma-chi" target="_blank"><p class="mt-3">GitHub</p></a>
                     </div>
                   </div>
                 </div>
@@ -144,7 +145,6 @@
                                 Ten person group project building multiple machine learning models to predict whether
                                 customers will buy a product based on observed qualities.
                             </p>
-                            <a href="https://github.com/martingul/ECS171-Team11" target="_blank"><p class="mt-3">GitHub</p></a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,8 @@
                             <h4 class="text-uppercase m-0">Pouch Finance <br>Tracker</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
-                                <a href="https://pouch.cash/" target="_blank">
+                            	<!-- TODO -->
+                                <a href="https://pouch.cash" target="_blank">
                                     <img src="pouch.jpg" width="auto" height="170px">
                                     <div class="overlay">
                                         <span>Click Me!</span>
@@ -165,51 +166,48 @@
                             <p class="mt-3">
                                 Finance tracker to track user's spending on a daily, weekly, and monthly basis.
                             </p>
-                            <a target="_blank"><p class="mt-3">Work In Progress</p></a>
                         </div>
                     </div>
                 </div>
 
               </div>
               <div class="row">
-                <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-6 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <h4 class="text-uppercase m-0">Sound Reactive LED Strip</h4>
                             <hr class="my-4">
-                            <img src="led.jpg" width="250px" height="auto">
+                            <div class="overlay-container">
+	                            <a href="https://github.com/MaxMol1/Sound-Reactive-LED" target="_blank">
+	                                <img src="led.jpg" width="auto" height="170px">
+	                                <div class="overlay">
+	                                    <span>Click Me!</span>
+	                                </div>
+	                            </a>
+	                        </div>
                             <p class="mt-3">
                                 Sound reactive LED strip with lyric fetching API and lyrical sentiment analysis.
                             </p>
-                            <a href="https://github.com/MaxMol1/Sound-Reactive-LED" target="_blank"><p class="mt-3">GitHub</p></a>
                         </div>
                     </div>
                 </div>
         
-                <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-6 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <h4 class="text-uppercase m-0">Wood <br> Classificaton</h4>
+                            <h4 class="text-uppercase m-0">Bit Project Curriculum</h4>
                             <hr class="my-4">
-                            <img src="wood.jpg" width="250px" height="auto">
+                            <div class="overlay-container">
+	                            <a href="https://www.bitproject.org/" target="_blank">
+	                                <img src="bitproject.jpg" width="auto" height="170px">
+	                                <div class="overlay">
+	                                    <span>Click Me!</span>
+	                                </div>
+	                            </a>
+	                        </div>
                             <p class="mt-3">
-                                Class project to detect vessel elements in wood and cluster observations
+                                Created numerous computer science activities and lessons as part of a student run club at UC Davis called Bit Project aiming to create a STEM curriculum for underrepresented grade schools in the Sacramento area.
                             </p>
-                            <a target="_blank"><p class="mt-3">TODO: GitHub</p></a>
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <h4 class="text-uppercase m-0">Bit Project <br>Curriculum</h4>
-                            <hr class="my-4">
-                            <img src="bit.jpg" width="250px" height="auto">
-                            <p class="mt-3">
-                                Student developed curriculum for underrepresented grade schools in the Sacramento area.
-                            </p>
-                            <a href="https://github.com/bitprj" target="_blank"><p class="mt-3">GitHub</p></a>
                         </div>
                     </div>
                 </div>
