Expanded projects and skill sections

--- a/index.html
+++ b/index.html
@@ -121,9 +121,12 @@
                                 </div>
                             </a>
                         </div>
-                        <p class="mt-3">Website for the Theta Omicron Chapter of Sigma Chi developed with HTML, CSS, and
-                            Javascript.
-                        </p>
+                        <div class="project-description">
+                            <p class="project-description mt-3">
+                                I developed the current website for the Theta Omicron Chapter of Sigma Chi at UC Davis
+                                using HTML, CSS, and JavaScript.
+                            </p>
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -141,10 +144,12 @@
                                     </div>
                                 </a>
                             </div>
-                            <p class="mt-3">
-                                Ten person group project building multiple machine learning models to predict whether
-                                customers will buy a product based on observed qualities.
-                            </p>
+                            <div class="project-description">
+                                <p class="mt-3">
+                                    This is a ten person machine learning project where my team built three models using
+                                    sci-kit learn and Keras to predict customer shopping habits based on a public database.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -163,9 +168,14 @@
                                     </div>
                                 </a>
                             </div>
-                            <p class="mt-3">
-                                Finance tracker to track user's spending on a daily, weekly, and monthly basis.
-                            </p>
+                            <div class="project-description">
+                                <p class="mt-3">
+                                    Pouch is a finance tracker application that reports the user's spending on a 
+                                    across multiple bank accounts on a daily basis.
+                                    <br>
+                                    <strong>Contact for limited access</strong>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -184,10 +194,14 @@
 	                                    <span>Click Me!</span>
 	                                </div>
 	                            </a>
-	                        </div>
-                            <p class="mt-3">
-                                Sound reactive LED strip with lyric fetching API and lyrical sentiment analysis.
-                            </p>
+                            </div>
+                            <div class="project-description">
+                                <p class="mt-3">
+                                    This is a multistage project aiming to create a framework for sound
+                                    reactive lights using an ESP8266 microcontroller. It includes a lyric fetching API
+                                    and lyrical analysis to choose colors based off sentiment.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -204,10 +218,14 @@
 	                                    <span>Click Me!</span>
 	                                </div>
 	                            </a>
-	                        </div>
-                            <p class="mt-3">
-                                Created numerous computer science activities and lessons as part of a student run club at UC Davis called Bit Project aiming to create a STEM curriculum for underrepresented grade schools in the Sacramento area.
-                            </p>
+                            </div>
+                            <div class="project-description">
+                                <p class="mt-3">
+                                    I created numerous computer science activities and lessons as part of a 
+                                    student run club at UC Davis called Bit Project aiming to create a STEM 
+                                    curriculum for underrepresented grade schools in the Sacramento area.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -222,12 +240,14 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                   <div class="card py-4 h-100">
                     <div class="card-body text-center">
-                      <h4 class="text-uppercase m-0">Front End</h4>
+                      <h4 class="text-uppercase m-0">Languages</h4>
                       <hr class="my-4">
+                      <p>Python</p>
+                      <p>TypeScript</p>
                       <p>HTML/CSS</p>
-                      <p>Bootstrap</p>
-                      <p>Vue.js</p>
-                      <p>D3.js</p>
+                      <p>C</p>
+                      <p>C++</p>
+                      <p>Shell</p>  
                     </div>
                   </div>
                 </div>
@@ -235,10 +255,14 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                   <div class="card py-4 h-100">
                     <div class="card-body text-center">
-                      <h4 class="text-uppercase m-0">Back End</h4>
+                      <h4 class="text-uppercase m-0">Tools</h4>
                       <hr class="my-4">
                       <p>Node.js</p>
-                      <p>Express</p>
+                      <p>Bootstrap</p>
+                      <p>Vue.js</p>
+                      <p>Pandas</p>
+                      <p>Sci-kit learn</p>
+                      <p>Keras</p>
                       <p>Docker</p>
                     </div>
                   </div>
@@ -247,11 +271,10 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                   <div class="card py-4 h-100">
                     <div class="card-body text-center">
-                      <h4 class="text-uppercase m-0">Data Science</h4>
+                      <h4 class="text-uppercase m-0">Databases</h4>
                       <hr class="my-4">
-                      <p>Pandas</p>
-                      <p>Numpy</p>
-                      <p>Sci-kit learn</p>
+                      <p>MongoDB</p>
+                      <p>PostgreSQL</p>
                     </div>
                   </div>
                 </div>
