Added experience section

--- a/index.html
+++ b/index.html
@@ -84,28 +84,40 @@
         <!-- Experience  -->
         <div class="row" id="experience">
             <div class="col-12 text-center">
-                <h1 class="header-padding">Experience</h1>
+                <h1 class="top-padding bottom-padding">Experience</h1>
             </div>
             <div class="col-12">
                 <div class="experience-container">
                     <h3 class="pb-1">UC Davis Genome Center</h3>
+                    <h5 class="pb-1">May 2020-October 2020</h5>
                     <p class="pb-5">
-                        Placeholder text for endeavors at UC Davis Genome Center
+                        I worked for <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
+                        (Critical Assessment of Techniques for Protein Structure Prediction) over the summer
+                        of 2020 at the UC Davis Genome Center where I helped migrate the computationally heavy parts of the project
+                        to a more powerful Linux Machine and a Slurm computer cluster. I created numerous Shell scripts to automate
+                        processes and tested the reliability of a key data processing pipeline. I also helped create data
+                        visualizations with Python to analyze the accuracy of protein structure predictions submitted to my
+                        supervisors and created new methods to assess those predictions.
                     </p>
                     <h3 class="pb-1">AltoPass, Inc.</h3>
+                    <h5 class="pb-1">May 2020-September 2020</h5>
                     <p class="pb-5">
-                        Worked on the search engine for the AltoPass password manager app.
+                        I worked for a small start up to improve the search engine of their password managing app by gathering
+                        services, processing them, and ranking them using several data heuristics.
                     </p>
                     <h3 class="pb-1">Private Tutor</h3>
+                    <h5 class="pb-1">February 2017-June 2020</h5>
                     <p>
-                        Placeholder text for endeavors as a private tutor...    
+                        I worked as private computer science and mathematics tutor for ages 12-18. I created lesson plans
+                        and worked with kids in areas where the struggled in school to reinforce content they were learning,
+                        as well as help them get ahead and improve their understanding in whichever way they were interested in.
                     </p>
                 </div>
             </div>
         </div>
         <!-- Projects -->
-        <div class="text-center" id="projects" style="margin-top: 100px;">
-            <h1 class="mb-5">Projects</h1>
+        <div class="text-center" id="projects">
+            <h1 class="mb-5 top-padding">Projects</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
