Fix wording in experience section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h3 class="pb-1">UC Davis Genome Center</h3>
                     <h5 class="pb-1">May 2020-October 2020</h5>
                     <p class="pb-5">
-                        I worked for <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
+                        I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
                         (Critical Assessment of Techniques for Protein Structure Prediction) over the summer
                         of 2020 at the UC Davis Genome Center where I helped migrate the computationally heavy parts of the project
                         to a more powerful Linux Machine and a Slurm computer cluster. I created numerous Shell scripts to automate
@@ -102,14 +102,14 @@
                     <h3 class="pb-1">AltoPass, Inc.</h3>
                     <h5 class="pb-1">May 2020-September 2020</h5>
                     <p class="pb-5">
-                        I worked for a small start up to improve the search engine of their password managing app by gathering
+                        I worked with a small start up to improve the search engine of their password managing app by gathering
                         services, processing them, and ranking them using several data heuristics.
                     </p>
                     <h3 class="pb-1">Private Tutor</h3>
                     <h5 class="pb-1">February 2017-June 2020</h5>
                     <p>
-                        I worked as private computer science and mathematics tutor for ages 12-18. I created lesson plans
-                        and worked with kids in areas where the struggled in school to reinforce content they were learning,
+                        I helped kids ages 12-18 in computer science and mathematics as private tutor. I created lesson plans
+                        and worked with the kids in areas where the struggled in school to reinforce content they were learning,
                         as well as help them get ahead and improve their understanding in whichever way they were interested in.
                     </p>
                 </div>
