Fix dynamic resizing, word choice

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-12">
                 <div class="experience-container">
                     <h3 class="pb-1">UC Davis Genome Center</h3>
-                    <h5 class="pb-1">May 2020-October 2020</h5>
+                    <h5 class="pb-1">June 2020 - Present</h5>
                     <p class="pb-5">
                         I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
                         (Critical Assessment of Techniques for Protein Structure Prediction) over the summer
@@ -97,16 +97,17 @@
                         to a more powerful Linux Machine and a Slurm computer cluster. I created numerous Shell scripts to automate
                         processes and tested the reliability of a key data processing pipeline. I also helped create data
                         visualizations with Python to analyze the accuracy of protein structure predictions submitted to my
-                        supervisors and created new methods to assess those predictions.
+                        supervisors and created new methods to assess those predictions. I am hoping to move to a team
+                        that does Deep-Learning research regarding solving the problem of protein folding.
                     </p>
                     <h3 class="pb-1">AltoPass, Inc.</h3>
-                    <h5 class="pb-1">May 2020-September 2020</h5>
+                    <h5 class="pb-1">May 2020 - November 2020</h5>
                     <p class="pb-5">
                         I worked with a small start up to improve the search engine of their password managing app by gathering
                         services, processing them, and ranking them using several data heuristics.
                     </p>
                     <h3 class="pb-1">Private Tutor</h3>
-                    <h5 class="pb-1">February 2017-June 2020</h5>
+                    <h5 class="pb-1">February 2017 - June 2020</h5>
                     <p>
                         I helped kids ages 12-18 in computer science and mathematics as private tutor. I created lesson plans
                         and worked with the kids in areas where the struggled in school to reinforce content they were learning,
