--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p>
                         I helped kids ages 12-18 in computer science and mathematics as private tutor. I created lesson plans
                         and worked with the kids in areas where the struggled in school to reinforce content they were learning,
-                        as well as help them get ahead and improve their understanding in whichever way they were interested in.
+                        as well as helped them get ahead and improve their understanding in whichever way they were interested in.
                     </p>
                 </div>
             </div>
