Fix experience description

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-12">
                 <div class="experience-container">
-                    <h3 class="pb-1">UC Davis Genome Center</h3>
+                    <h3 class="pb-1">C.A.S.P.</h3>
                     <h5 class="pb-1">June 2020 - Present</h5>
                     <p class="pb-5">
                         I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
