Add to experience section

--- a/index.html
+++ b/index.html
@@ -88,23 +88,33 @@
             </div>
             <div class="col-12">
                 <div class="experience-container">
-                    <h3 class="pb-1">C.A.S.P.</h3>
+                    <h3 class="pb-1">C.A.S.P. - UC Davis Genome Center</h3>
                     <h5 class="pb-1">June 2020 - Present</h5>
                     <p class="pb-5">
                         I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
-                        (Critical Assessment of Techniques for Protein Structure Prediction) over the summer
-                        of 2020 at the UC Davis Genome Center where I helped migrate the computationally heavy parts of the project
-                        to a more powerful Linux Machine and a Slurm computer cluster. I created numerous Shell scripts to automate
-                        processes and tested the reliability of a key data processing pipeline. I also helped create data
-                        visualizations with Python to analyze the accuracy of protein structure predictions submitted to my
-                        supervisors and created new methods to assess those predictions. I am hoping to move to a team
-                        that does Deep-Learning research regarding solving the problem of protein folding.
+                        (Critical Assessment of Techniques for Protein Structure Prediction) as a data processing assistant
+                        over the summer of 2020. The project aims to centralize researchers from around the world aiming
+                        to solve the infamous, fifty year-old protein folding problem— in other words understanding
+                        how and where a tertiary protein structure folds. This year, Google's DeepMind came up with an astounding
+                        solution that rivals the accuracy of laboratory measurements.
+                        <br><br>
+                        I helped migrate the computationally heavy parts of the CASP14 project to a more powerful Linux Machine 
+                        and a distributed system, while creating numerous Shell scripts to automate processing protein structure 
+                        and output files. I debugged old Perl scripts and tested the reliability of key data processing pipelines
+                        while I ran structural assessments of target structures and their predictions.
+                        <br><br>
+                        I also got the opportunity to create visualizations with Python to analyze the accuracy of predictions,
+                        as well as to create new methods to assess those predictions based on various criteria. In the beginning
+                        of 2021, I am hoping to move to a team focusing on developing and refining
+                        deep learning prediction methods to solve this extraordinary puzzle.
                     </p>
                     <h3 class="pb-1">AltoPass, Inc.</h3>
                     <h5 class="pb-1">May 2020 - November 2020</h5>
                     <p class="pb-5">
-                        I worked with a small start up to improve the search engine of their password managing app by gathering
-                        services, processing them, and ranking them using several data heuristics.
+                        I worked with a small start-up to improve the search engine of their password manager app by gathering
+                        services, processing them, and ranking them using several data heuristics. I was able to work with
+                        Elastic Search and learned how to apply my skills to work with big data. The app recently went live on
+                        Google Play Store and App Store.
                     </p>
                     <h3 class="pb-1">Private Tutor</h3>
                     <h5 class="pb-1">February 2017 - June 2020</h5>
