Add to skills section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         I worked with a small start-up to improve the search engine of their password manager app by gathering
                         services, processing them, and ranking them using several data heuristics. I was able to work with
                         Elastic Search and learned how to apply my skills to work with big data. The app recently went live on
-                        Google Play Store and App Store.
+                        git sGoogle Play Store and App Store.
                     </p>
                     <h3 class="pb-1">Private Tutor</h3>
                     <h5 class="pb-1">February 2017 - June 2020</h5>
@@ -280,6 +280,7 @@
                     <div class="card-body text-center">
                       <h4 class="text-uppercase m-0">Tools</h4>
                       <hr class="my-4">
+                      <p>Git</p>
                       <p>Node.js</p>
                       <p>Bootstrap</p>
                       <p>Vue.js</p>
