Fix margin and padding of project section

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>Max's Portfolio</title>
     <!-- Bootstrap, FontAwesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="./style.css" rel="stylesheet">
 </head>
@@ -205,9 +200,9 @@
             <!-- First Row -->
             <div class="row text-center">
                 <!-- Sigma Chi Website -->
-                <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-4 mt-md-0 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body no-vertical-padding">
+                        <div class="card-body no-top-padding">
                             <h4 class="text-uppercase m-0">Sigma Chi <br>Website</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
@@ -224,9 +219,9 @@
                     </div>
                 </div>
                 <!-- Customer Classification -->
-                <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-4 mt-4 mt-md-0 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body" style="padding-top: 0px;">
+                        <div class="card-body no-top-padding">
                             <h4 class="text-uppercase m-0">Customer <br>Classification</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
@@ -243,9 +238,9 @@
                     </div>
                 </div>
                 <!-- Pouch -->
-                <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-4 mt-4 mt-md-0 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body" style="padding-top: 0px;">
+                        <div class="card-body no-top-padding">
                             <h4 class="text-uppercase m-0">Pouch Finance <br>Tracker</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
@@ -267,9 +262,9 @@
             <!-- Second Row -->
             <div class="row text-center">
                 <!-- Sound Reactive LED Strip -->
-                <div class="col-md-6 mt-4 mb-3 mb-md-0">
+                <div class="col-md-6 mt-4 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body" style="padding-bottom: 0px;">
+                        <div class="card-body no-bottom-padding">
                             <h4 class="text-uppercase m-0">Sound Reactive <br>LED Strip</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
@@ -287,9 +282,9 @@
                     </div>
                 </div>
                 <!-- Bit Project -->
-                <div class="col-md-6 mt-4 mb-3 mb-md-0">
+                <div class="col-md-6 mt-4 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body text-center" style="padding-bottom: 0px;">
+                        <div class="card-body text-center no-bottom-padding">
                             <h4 class="text-uppercase m-0">Bit Project <br>Curriculum</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
