--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <!-- Sound Reactive LED Strip -->
                 <div class="col-md-6 mt-4 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
-                        <div class="card-body no-bottom-padding">
+                        <div class="card-body no-bottom-padding led-padding">
                             <h4 class="text-uppercase m-0">Sound Reactive <br>LED Strip</h4>
                             <hr class="my-4">
                             <div class="overlay-container">
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <!-- Bit Project -->
-                <div class="col-md-6 mt-4 mb-3 mb-md-0 no-padding">
+                <div class="col-md-6 mt-4 mb-0 no-padding">
                     <div class="card h-100">
                         <div class="card-body text-center no-bottom-padding">
                             <h4 class="text-uppercase m-0">Bit Project <br>Curriculum</h4>
